2012-02-01 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/cygwin-announce.mail.ex: Replace @ with (at).

2012-01-29 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (ReadmeFix): Check empty file. Check
	identical content by examining first line.

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckShellFiles): Improve
	legibility.
	(CygbuildPerlLibraryList): Improve package matching regexp to see
	More::ThanTwo, Like::This::One.

	* bin/template/install.lst.ex: Improve comments.

	* bin/template/install-after.sh.ex (Main): Add libdir variable.

	* bin/cygbuild.sh (CygbuildMakefileRunInstallMain):
	Correct PFX variable sent to CygbuildMakefileRunInstallCygwinOptions()
	(CygbuildMakefileRunInstallCygwinOptions): Add leading slash to
	docpfx variable.
	(CygbuildMakeRunInstallFixPerlPostinstall): Before writing stanza,
	delete path up till .inst/ directory for postinstall script.
	(CygbuildCmdGPGVerifyMain): Do not stop on signature failure.
	(CygbuildPatchFileList): Use more strict "tmp" directory exclusion.
	(CygbuildDllToLibName): Add libpng14
	(CygbuildPatchApplyQuiltMaybe): Call CygbuildPatchFileQuilt() with
	$DIR_CYGPATCH directory.
	(CygbuildPatchFileList): Call CygbuildPatchFileQuilt() with
	$DIR_CYGPATCH directory.

2011-11-12 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdPkgDevelStandardBin):
	Change tar group from nobody to $CYGBUILD_TAR_GROUP.
	(CygbuildBootVariablesGlobalMain): define
	$CYGBUILD_TAR_GROUP.
	(CygbuildCmdMkpatchMain): Use $CYGBUILD_TAR_GROUP.
	(CygbuildInstallPackageDocs): Use $CYGBUILD_TAR_GROUP.
	(CygbuildInstallFixDocdirInstall): Use $CYGBUILD_TAR_GROUP.
	(CygbuildInstallFixEtcdirInstall): Use $CYGBUILD_TAR_GROUP.

2011-06-16 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchFileQuilt): Correct
	"-o" option to "-a" to ignore */tmp directories.
	(CygbuildPatchApplyQuiltMaybe): Check for empty
	quilt "series" file in for-loop.
	(CygbuildHelpShort): Fix typo in heading.