@@ -1,5 +1,8 @@
 2012-02-01 Wed  Jari Aalto  <jari.aalto@cante.net>
 
+	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckLibrariesPerlListLocal): New.
+	(CygbuildCmdInstallCheckLibrariesPerl): Filter out local libs.
+
 	* bin/template/cygwin-announce.mail.ex: Replace @ with (at).
 
 2012-01-29 Sun  Jari Aalto  <jari.aalto@cante.net>
